# PhenoLinkPlugins

./: .gitignore  CMakeLists.txt  README.md
Loaders/: CMakeLists.txt  CarlZeissImaging.cpp  CarlZeissImaging.h  PhenoLinkArrayScan.cpp  PhenoLinkArrayScan.h  PhenoLinkMetadataGenericLoader.cpp  PhenoLinkMetadataGenericLoader.h  incellloader.cpp  incellloader.h  perkinelmerloader.cpp  perkinelmerloader.h  yokogawaloader.cpp  yokogawaloader.h
Process/: CMakeLists.txt  ZStackProjection.cpp  ZStackProjection.h
Process/PhenoLinkPluginCore/: PhenoLinkPluginCore.h
